[workspace]
resolver = "2"

members = [
    "terl",
    "py-ir",
    "py-ast",
    "pycc-rs",
    "py-declare",
    "py-lex",
    "py-codegen",
    "py-codegen-c",
    "py-codegen-llvm",
]


[workspace.package]
authors = ["pin1yin1yu3yan2/core"]
description = "Chinese Phonetic Alphabet based programming language"
readme = "README.md"
homepage = "https://github.com/pin1yin1yu3yan2"
repository = "https://github.com/pin1yin1yu3yan2/Pin1Yin1-Compiler-Rust"
license = "GPL-3.0"
keywords = ["language", "parser", "Chinese", "compiler", "pinyin"]
categories = ["compilers"]
edition = "2021"
version = "0.0.1"


[workspace.dependencies]
serde = "1"
serde_json = "1"
either = "1"
rayon = "1"
colored = "2"
base32 = "0.5"
clap = "4.5"
inkwell = "0.4.0"


[workspace.dependencies.terl]
version = "0.0.1"
path = "./terl"

[workspace.dependencies.py-lex]
version = "0.0.1"
path = "./py-lex"
default-features = false

[workspace.dependencies.py-ir]
version = "0.0.1"
path = "./py-ir"

[workspace.dependencies.py-ast]
version = "0.0.1"
path = "./py-ast"

[workspace.dependencies.py-declare]
version = "0.0.1"
path = "./py-declare"

[workspace.dependencies.py-codegen]
version = "0.0.1"
path = "./py-codegen"

[workspace.dependencies.py-codegen-c]
version = "0.0.1"
path = "./py-codegen-c"

[workspace.dependencies.py-codegen-llvm]
version = "0.0.1"
path = "./py-codegen-llvm"


[profile.release]
lto = true
strip = true
