[package]
name = "pin1yin1-ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin1yin1-parser = { path = "../pin1yin1-parser", default-features = false }
lazy_static = "1.4.0"
serde = { version = "1", features = ["serde_derive"], optional = true }

[features]
default = ["ser"]
ser = ["serde", "pin1yin1-parser/ser"]
