[package]
name = "py-ast"
version = "0.0.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
readme.workspace = true
repository.workspace = true
keywords = ["ast", "compiler", "pinyin"]
description = "Pin1Yin1 ast definition and parse for pycc-rs"


[dependencies]
either = { workspace = true }
terl = { workspace = true }
py-ir = { workspace = true }
py-lex = { workspace = true, default-features = true }
py-declare = { workspace = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
terl = { workspace = true, features = ["parser_calling_tree"] }

[features]
parallel = ["py-declare/parallel", "rayon"]
