[package]
name = "py-codegen-c"
version = "0.0.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
readme.workspace = true
repository.workspace = true
keywords = ["c", "codegen", "compiler", "pinyin"]
description = "C codegen backend implementation for Pin1Yin1"


[dependencies]
py-codegen = { workspace = true }
py-ir = { workspace = true }
py-lex = { workspace = true, features = ["ops"] }
base32 = { workspace = true }
