[package]
name = "py-codegen-llvm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
readme.workspace = true
repository.workspace = true
keywords = ["llvm", "codegen", "compiler", "pinyin"]
description = "llvm codegen backend implementation for Pin1Yin1"

[dependencies]
py-ir = { workspace = true }
py-lex = { workspace = true }
py-codegen = { workspace = true }
inkwell = { workspace = true }

[features]
llvm-dynamic = ["inkwell/llvm17-0-prefer-dynamic"]
llvm-static = ["inkwell/llvm17-0-prefer-static"]
