[package]
name = "py-codegen"
version = "0.0.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
readme.workspace = true
repository.workspace = true
keywords = ["codegen", "compiler", "pinyin"]
description = "pycc-rs codegen interface"

[dependencies]
py-ir = { workspace = true }
