[package]
name = "py-declare"
version = "0.0.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
readme.workspace = true
repository.workspace = true
keywords = ["type", "declare", "compiler", "pinyin"]
description = "type declare system for pycc-rs"
[dependencies]
serde = { workspace = true }
py-ir = { workspace = true }
py-lex = { workspace = true }
terl = { workspace = true }

[features]
parallel = []
