[package]
name = "py-ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
py-lex = { path = "../py-lex", default-features = false, features = ["ops"] }
serde = { workspace = true, features = ["serde_derive"] }
