[package]
name = "py-lex"
version = "0.0.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
readme.workspace = true
repository.workspace = true
keywords = ["type", "declare", "compiler", "pinyin"]
description = "lex definition for pycc-rs"


[dependencies]
terl = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }

[features]
default = ["parse", "ops", "preprocess", "syntax", "types"]

parse = ["terl"]
ops = []
preprocess = []
syntax = []
types = []
