[package]
name = "pycc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }
either = { workspace = true }
pyc = { path = "../pyc" }
terl = { path = "../terl", features = ["parser_calling_tree"] }
py-ir = { path = "../py-ir" }
py-lex = { path = "../py-lex" }
py-ast = { path = "../py-ast" }
clap = { version = "4.5", features = ["derive"] }
py-codegen-llvm = { path = "../py-codegen-llvm", optional = true }
py-codegen-c = { path = "../py-codegen-c", optional = true }

[features]

default = ["backend-llvm", "backend-c", "parallel-declare"]
backend-llvm = ["py-codegen-llvm"]
backend-c = ["py-codegen-c"]
parallel-declare = ["py-ast/parallel"]
