[package]
name = "pycc-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
readme.workspace = true
repository.workspace = true
keywords = ["compiler", "pinyin"]
description = "Pin1Yin1 compiler rust implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }
either = { workspace = true }
py-codegen = { workspace = true }
terl = { workspace = true, features = ["parser_calling_tree"] }
py-ir = { workspace = true }
py-lex = { workspace = true }
py-ast = { workspace = true }
clap = { workspace = true, features = ["derive"] }
py-codegen-llvm = { workspace = true, optional = true }
py-codegen-c = { workspace = true, optional = true }

[features]

default = ["backend-llvm", "backend-c", "parallel-declare"]
backend-llvm = ["py-codegen-llvm"]
backend-c = ["py-codegen-c"]
parallel-declare = ["py-ast/parallel"]
