[package]
name = "terl"
version = "0.0.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
readme.workspace = true
repository.workspace = true
keywords = ["parser", "compiler"]
description = "a general parser"

[features]
default = ["color"]
parser_calling_tree = []
color = ["colored"]


[dependencies]
colored = { workspace = true, optional = true }
